[gd_scene load_steps=12 format=3 uid="uid://cpkm0apb18y3c"]

[ext_resource type="Script" uid="uid://0fnv3nvjxrv5" path="res://hud/hud.gd" id="1_0ivg5"]
[ext_resource type="Script" uid="uid://deho7nyp7e3f" path="res://hud/Health.gd" id="1_2gk58"]
[ext_resource type="Script" uid="uid://du1673iuvtkr2" path="res://hud/trader_hud.gd" id="1_fjv1a"]
[ext_resource type="PackedScene" uid="uid://ttf4opv4vuiv" path="res://hud/container.tscn" id="2_318vg"]
[ext_resource type="PackedScene" uid="uid://gxvvais6hvep" path="res://hud/trade_container.tscn" id="3_0ivg5"]
[ext_resource type="PackedScene" uid="uid://bo7g48ddsqmd7" path="res://hud/map.tscn" id="4_w8tcp"]
[ext_resource type="Script" uid="uid://b3j1gly8kl5tu" path="res://hud/coins_label.gd" id="5_svhta"]

[sub_resource type="LabelSettings" id="LabelSettings_w8tcp"]
font_color = Color(0.766361, 0.783581, 7.70092e-07, 1)

[sub_resource type="Animation" id="Animation_fjv1a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_svhta"]
resource_name = "changed_coins"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:label_settings:font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [16, 20, 16]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ivg5"]
_data = {
&"RESET": SubResource("Animation_fjv1a"),
&"changed_coins": SubResource("Animation_svhta")
}

[node name="HUD" type="CanvasLayer"]
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, 0)
script = ExtResource("1_0ivg5")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 384.0
offset_bottom = 38.4
color = Color(0, 0, 0, 1)

[node name="trader_hud" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 384.0
offset_bottom = 216.0
script = ExtResource("1_fjv1a")

[node name="ColorRect" type="ColorRect" parent="trader_hud"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 216.0
color = Color(0, 0, 0, 0.435294)

[node name="CenterContainer" type="CenterContainer" parent="trader_hud"]
layout_mode = 0
offset_right = 384.0
offset_bottom = 216.0

[node name="VBoxContainer" type="VBoxContainer" parent="trader_hud/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="HBoxContainer" type="HBoxContainer" parent="trader_hud/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Trade_container" parent="trader_hud/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_0ivg5")]
position = Vector2(68.3333, -8.66667)

[node name="Trade_container2" parent="trader_hud/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_0ivg5")]
position = Vector2(-29, -8.66667)

[node name="Trade_container3" parent="trader_hud/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_0ivg5")]
position = Vector2(17.6667, -8.66667)

[node name="CloseButton" type="Button" parent="trader_hud/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Close"

[node name="Health" type="GridContainer" parent="."]
anchors_preset = -1
anchor_left = 0.271
anchor_top = 0.017
anchor_right = 0.271
anchor_bottom = 0.017
offset_left = -40.5253
offset_top = -10.6827
offset_right = 71.4747
offset_bottom = 38.984
columns = 8
script = ExtResource("1_2gk58")

[node name="Container" parent="." instance=ExtResource("2_318vg")]
position = Vector2(216, 12.6667)

[node name="Container2" parent="." instance=ExtResource("2_318vg")]
position = Vector2(178.667, 12.6667)

[node name="Map" parent="." instance=ExtResource("4_w8tcp")]

[node name="CoinsLabel" type="Label" parent="."]
offset_left = 228.0
offset_right = 274.0
offset_bottom = 25.0
text = "0$"
label_settings = SubResource("LabelSettings_w8tcp")
horizontal_alignment = 1
script = ExtResource("5_svhta")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CoinsLabel"]
libraries = {
&"": SubResource("AnimationLibrary_0ivg5")
}

[connection signal="pressed" from="trader_hud/CenterContainer/VBoxContainer/CloseButton" to="trader_hud" method="close"]
